global using System.Diagnostics.CodeAnalysis;
global using System.Linq.Expressions;
global using System.Reflection;
global using AutoMapper;
global using Grpc.Core;
global using Grpc.Net.ClientFactory;
global using Microsoft.AspNetCore.Authorization;
global using Microsoft.AspNetCore.Http;
global using Microsoft.AspNetCore.Mvc;
global using Microsoft.AspNetCore.Routing;
global using Microsoft.Extensions.Configuration;
global using Microsoft.Extensions.Options;
global using NSwag.Annotations;
global using Serval.Shared.Configuration;
global using Serval.Shared.Contracts;
global using Serval.Shared.Controllers;
global using Serval.Shared.Entities;
global using Serval.Shared.Services;
global using Serval.Shared.Utils;
global using Serval.Translation.Configuration;
global using Serval.Translation.Contracts;
global using Serval.Translation.Entities;
global using Serval.Translation.Services;
global using SIL.DataAccess;
global using AlignedWordPair = Serval.Translation.Engine.V1.AlignedWordPair;
global using Phrase = Serval.Translation.Engine.V1.Phrase;
global using TranslationResult = Serval.Translation.Engine.V1.TranslationResult;
global using WordGraph = Serval.Translation.Engine.V1.WordGraph;
global using WordGraphArc = Serval.Translation.Engine.V1.WordGraphArc;
